# reversi_tournament

./: LICENSE  README.md  communication_protocol.md
rt/: pyproject.toml
rt/rt/: agent.py  arena.py  engine.py  server.py  state.py
