[tool.poetry] 
name = "rt"
version = "0.1.0"
description = ""
authors = ["Hampus Fröjdholm <hampus.frojdholm@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
numpy = "^1.26.1"


[tool.poetry.group.dev.dependencies]
python-lsp-server = {extras = ["all"], version = "^1.9.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
